# motarjim

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/motarjim-ast/: Cargo.toml
crates/motarjim-ast-css/: Cargo.toml
crates/motarjim-ast-css/src/: lib.rs  selector.rs  stylesheet.rs  value.rs
crates/motarjim-ast-ir/: Cargo.toml
crates/motarjim-ast-ir/src/: ir.rs  layout.rs  lib.rs
crates/motarjim-ast/examples/: basics.rs
crates/motarjim-ast/src/: css.rs  html.rs  ir.rs  layout.rs  lib.rs  selector.rs  semantic.rs  style.rs
crates/motarjim-cache/: Cargo.toml
crates/motarjim-cache/src/: lib.rs
crates/motarjim-cli/: Cargo.toml
crates/motarjim-cli/src/: lib.rs  main.rs
crates/motarjim-config/: Cargo.toml
crates/motarjim-config/src/: lib.rs
crates/motarjim-core/: Cargo.toml
crates/motarjim-core/examples/: basics.rs
crates/motarjim-core/src/: cancellation.rs  dag.rs  event.rs  lib.rs  plugin.rs  query.rs
crates/motarjim-css/: Cargo.toml
crates/motarjim-css/benches/: css_bench.rs
crates/motarjim-css/examples/: basics.rs
crates/motarjim-css/src/: calc.rs  cascade.rs  lib.rs  matching.rs  media.rs  properties.rs  resolver.rs  tests.rs  value.rs
crates/motarjim-diag/: Cargo.toml
crates/motarjim-diag/examples/: basics.rs
crates/motarjim-diag/src/: bag.rs  codes.rs  diagnostic.rs  emitter.rs  lib.rs  span.rs
crates/motarjim-ffi/: Cargo.toml
crates/motarjim-ffi/src/: lib.rs
crates/motarjim-formatter/: Cargo.toml
crates/motarjim-formatter/examples/: basics.rs
crates/motarjim-formatter/src/: lib.rs
crates/motarjim-fs/: Cargo.toml
crates/motarjim-fs/src/: lib.rs
crates/motarjim-gen-compose/: Cargo.toml
crates/motarjim-gen-compose/benches/: gen_bench.rs
crates/motarjim-gen-compose/examples/: basics.rs
crates/motarjim-gen-compose/src/: generator.rs  lib.rs  tests.rs
crates/motarjim-gen-swiftui/: Cargo.toml
crates/motarjim-gen-swiftui/benches/: gen_bench.rs
crates/motarjim-gen-swiftui/examples/: basics.rs
crates/motarjim-gen-swiftui/src/: generator.rs  lib.rs  tests.rs
crates/motarjim-html/: Cargo.toml
crates/motarjim-html/src/: ast.rs  converter.rs  diagnostics.rs  lib.rs  parser.rs  span.rs
crates/motarjim-html/tests/: html_tests.rs
crates/motarjim-html/tests/snapshots/: html_tests__snapshot_boolean_attributes.snap  html_tests__snapshot_comment.snap  html_tests__snapshot_deeply_nested.snap  html_tests__snapshot_doctype.snap  html_tests__snapshot_empty_document.snap  html_tests__snapshot_malformed_html.snap  html_tests__snapshot_many_attributes.snap  html_tests__snapshot_mixed_content.snap  html_tests__snapshot_nested_elements.snap  html_tests__snapshot_script_tag.snap  html_tests__snapshot_self_closing.snap  html_tests__snapshot_simple_div.snap  html_tests__snapshot_style_tag.snap  html_tests__snapshot_unicode.snap  html_tests__snapshot_void_elements.snap  html_tests__snapshot_with_attributes.snap
crates/motarjim-incremental/: Cargo.toml
crates/motarjim-incremental/src/: lib.rs
crates/motarjim-ir/: Cargo.toml
crates/motarjim-ir/benches/: ir_bench.rs
crates/motarjim-ir/examples/: basics.rs
crates/motarjim-ir/src/: accessibility.rs  builder.rs  layout.rs  lib.rs  responsive.rs  semantic.rs  tests.rs  validator.rs
crates/motarjim-js/: Cargo.toml
crates/motarjim-js/benches/: js_bench.rs
crates/motarjim-js/examples/: basics.rs
crates/motarjim-js/src/: ast.rs  diagnostics.rs  events.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  token.rs  transform.rs  visitor.rs
crates/motarjim-js/src/ast/: expr.rs  lit.rs  mod.rs  node.rs  pat.rs  program.rs  stmt.rs
crates/motarjim-js/src/parser/: expr.rs  mod.rs  stmt.rs
crates/motarjim-js/src/semantic/: mod.rs  scope.rs
crates/motarjim-js/src/transform/: mod.rs  passes.rs
crates/motarjim-js/src/visitor/: mod.rs
crates/motarjim-js/tests/: diagnostics_tests.rs  events_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_tests.rs  transform_tests.rs  visitor_tests.rs
crates/motarjim-lexer/: Cargo.toml
crates/motarjim-lexer/benches/: lexer_bench.rs
crates/motarjim-lexer/examples/: basics.rs
crates/motarjim-lexer/src/: css.rs  cursor.rs  html.rs  lib.rs  proptests.rs  token.rs
crates/motarjim-lsp/: Cargo.toml
crates/motarjim-lsp/src/: lib.rs  main.rs
crates/motarjim-optimizer/: Cargo.toml
crates/motarjim-optimizer/benches/: optimizer_bench.rs
crates/motarjim-optimizer/examples/: basics.rs
crates/motarjim-optimizer/src/: helpers.rs  lib.rs  pass_manager.rs  passes.rs  tests.rs
crates/motarjim-parser/: Cargo.toml
crates/motarjim-parser/benches/: parser_bench.rs
crates/motarjim-parser/examples/: basics.rs
crates/motarjim-parser/src/: css.rs  html.rs  lib.rs  proptests.rs  util.rs
crates/motarjim-parser/src/css/: converter.rs  error.rs  mod.rs  parser.rs  tests.rs  validation.rs
crates/motarjim-profiling/: Cargo.toml
crates/motarjim-profiling/examples/: simple.rs
crates/motarjim-profiling/src/: lib.rs
crates/motarjim-selectors/: Cargo.toml
crates/motarjim-selectors/examples/: basics.rs
crates/motarjim-selectors/src/: display.rs  lib.rs  parser.rs  proptests.rs  specificity.rs  types.rs
crates/motarjim-serialize/: Cargo.toml
crates/motarjim-serialize/src/: lib.rs
crates/motarjim-session/: Cargo.toml
crates/motarjim-session/src/: lib.rs  source_map.rs
crates/motarjim-test-utils/: Cargo.toml
crates/motarjim-test-utils/src/: lib.rs
crates/motarjim-test-utils/tests/: golden_test.rs
crates/motarjim-test-utils/tests/golden/css/: cascade-specificity.css  media-queries.css
crates/motarjim-test-utils/tests/golden/html/: card-grid.html  form-with-inputs.html  navigation-bar.html  nested-elements.html
crates/motarjim-test-utils/tests/golden/output/compose/: card-grid.kt  (+4 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: css_parser.rs  html_parser.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+206 files in other folders)
