[package]
name = "xtask"
version.workspace = true
edition.workspace = true
description = "Build scripts for Motarjim compiler (codegen, diagrams, benchmarks)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
