[package]
name = "motarjim-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST type definitions for Motarjim compiler"

[dependencies]
motarjim-diag = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
smallvec = { workspace = true, features = ["serde"] }
smol_str = { workspace = true }
bitflags = { workspace = true }

[features]
default = []
serialize = ["dep:serde", "motarjim-diag/json"]

[lints]
workspace = true
