[package]
name = "motarjim-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Re-exports all AST types from domain-specific sub-crates"

[lints]
workspace = true

[dependencies]
motarjim-ast-html = { workspace = true }
motarjim-ast-css = { workspace = true }
motarjim-ast-ir = { workspace = true }
motarjim-span = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
smallvec = "1.15"

[features]
serialize = ["serde", "motarjim-ast-html/serialize", "motarjim-ast-css/serialize", "motarjim-ast-ir/serialize"]
default = []
