[package]
name = "motarjim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI application for Motarjim compiler"

[[bin]]
name = "motarjim"
path = "src/main.rs"

[dependencies]
motarjim-core = { workspace = true }
motarjim-config = { workspace = true }
motarjim-diag = { workspace = true }
motarjim-fs = { workspace = true }
motarjim-profiling = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[features]
default = []
watch = []
tui = []

[lints]
workspace = true
