[package]
name = "motarjim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Public API facade for Motarjim compiler"

[dependencies]
motarjim-ast = { workspace = true }
motarjim-diag = { workspace = true }
motarjim-lexer = { workspace = true }
motarjim-parser = { workspace = true }
motarjim-css = { workspace = true }
motarjim-selectors = { workspace = true }
motarjim-ir = { workspace = true }
motarjim-optimizer = { workspace = true }
motarjim-formatter = { workspace = true }
motarjim-gen-flutter = { workspace = true }
motarjim-gen-compose = { workspace = true }
motarjim-gen-swiftui = { workspace = true }
motarjim-config = { workspace = true }
motarjim-fs = { workspace = true }
motarjim-profiling = { workspace = true }
motarjim-cache = { workspace = true }
motarjim-incremental = { workspace = true }
dashmap = { version = "5", optional = true }
rayon = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
smol_str = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[features]
default = []
cancellation = []
dag = ["rayon"]
events = []
query-system = ["dep:dashmap"]
gen-flutter = []
gen-compose = []
gen-swiftui = []
wasm = ["dep:wasm-bindgen"]
ffi = []
ai = []
plugin-system = []

[lints]
workspace = true
