[package]
name = "motarjim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Public API facade for Motarjim compiler"

[dependencies]
motarjim-ast = { workspace = true }
motarjim-ast-html = { workspace = true }
motarjim-diag = { workspace = true }
motarjim-span = { workspace = true }
motarjim-lexer = { workspace = true }
motarjim-html = { workspace = true }
motarjim-parser = { workspace = true }
motarjim-css = { workspace = true }
motarjim-selectors = { workspace = true }
motarjim-ir = { workspace = true }
motarjim-optimizer = { workspace = true }
motarjim-formatter = { workspace = true }
motarjim-gen-flutter = { workspace = true }
motarjim-gen-compose = { workspace = true }
motarjim-gen-swiftui = { workspace = true }
motarjim-config = { workspace = true }
motarjim-fs = { workspace = true }
motarjim-profiling = { workspace = true }
motarjim-cache = { workspace = true }
motarjim-incremental = { workspace = true }
motarjim-session = { workspace = true }
dashmap = { version = "5", optional = true }
rayon = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[features]
default = ["dag", "incremental", "cache"]
cancellation = ["motarjim-session/cancellation"]
incremental = ["motarjim-session/incremental"]
cache = ["motarjim-session/cache"]
dag = ["rayon"]
events = []
query-system = ["dep:dashmap"]
wasm = ["dep:wasm-bindgen"]
plugin-system = []

[lints]
workspace = true
