[package]
name = "motarjim-formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code output formatter for Motarjim compiler"

[dependencies]
motarjim-diag = { workspace = true }
motarjim-ast = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
