[package]
name = "motarjim-gen-swiftui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SwiftUI code generator for Motarjim compiler"

[dependencies]
motarjim-ast = { workspace = true }
motarjim-diag = { workspace = true }
motarjim-ir = { workspace = true }
motarjim-formatter = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "gen_bench"
harness = false

[lints]
workspace = true
