[package]
name = "motarjim-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intermediate representation builder and transformation for Motarjim compiler"

[dependencies]
motarjim-diag = { workspace = true }
motarjim-ast = { workspace = true }
motarjim-ast-html = { workspace = true }
motarjim-ast-ir = { workspace = true }
motarjim-selectors = { workspace = true }
motarjim-span = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ir_bench"
harness = false

[lints]
workspace = true
