[package]
name = "motarjim-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optimization passes for Motarjim compiler IR"

[dependencies]
motarjim-diag = { workspace = true }
motarjim-ast = { workspace = true }
smallvec = { workspace = true }
rayon = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "optimizer_bench"
harness = false

[lints]
workspace = true
