[package]
name = "motarjim-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Recursive descent HTML parser for Motarjim compiler"

[dependencies]
motarjim-diag = { workspace = true }
motarjim-ast = { workspace = true }
motarjim-ast-css = { workspace = true }
motarjim-lexer = { workspace = true }
motarjim-span = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false

[lints]
workspace = true
