[package]
name = "motarjim-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTML and CSS parser for Motarjim compiler"

[dependencies]
motarjim-diag = { workspace = true }
motarjim-ast = { workspace = true }
motarjim-ast-css = { workspace = true }
motarjim-lexer = { workspace = true }
motarjim-span = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
lightningcss = "1.0.0-alpha.71"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false

[lints]
workspace = true
