[package]
name = "motarjim-profiling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance profiling for Motarjim compiler"

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
trace = []
flamegraph = []

[lints]
workspace = true
