[package]
name = "motarjim-selectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CSS selector parser and matching engine for Motarjim compiler"

[dependencies]
motarjim-diag = { workspace = true }
motarjim-ast = { workspace = true }
motarjim-span = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
