[package]
name = "motarjim-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test utilities for Motarjim compiler"

[dependencies]
motarjim-core = { workspace = true }
motarjim-diag = { workspace = true }
motarjim-fs = { workspace = true }
motarjim-config = { workspace = true }
motarjim-span = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
